abel to addthe task

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "incognito-theme-changer": "^1.0.0",
     "react": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
